fix get single book error
